public/ui/wmp/wmp9-fixed.css
/* ... */
.wmp .shapeshader#topright .wmpshape:after {
    width: 14px;
    height: 31px;
    content: " ";
    display: block;
    box-shadow: -2px 0 #fff;
    right: -14px;
    top: 0;
    border-radius: 0 14px 0 0;
    position: absolute
}

.wmp .wmpshapeholder#topright .wmpshape {
    clip-path: path("M256,12A12,12,0,0,0,244,0H51C30,0,24,31,0,31H256Z");
    width: 231px;
    height: 37px;
    right: 0;
    top: 0;
    box-shadow: inset 0 4px 2px #9ac2ff, inset -1px 0 var(--baseColor), inset -2px 0 1px #7a9eeb;
    background: linear-gradient(to left, var(--baseColor) 0, var(--baseColor) 1%, transparent 5%, transparent 100%), linear-gradient(to bottom, #7190c7, #5969a8);
    border-radius: 0 12px 0 0
}

.wmp .shapeshader#bottomleft {
    width: 92px;
    height: 31px;
    bottom: 16px;
    display: inline-block;
    z-index: 1
}

.wmp .shapeshader#bottomleft .wmpshape {
    clip-path: path("M0,0A9.61,9.61,0,0,0,7,9L92,31V0Z");
    width: 92px;
    height: 31px;
    bottom: 0;
    background: linear-gradient(to right, #849cd9 0, var(--baseColor) 80%, var(--baseColor) 100%)
}

.wmp .wmpshapeholder#bottomleft .wmpshape {
    clip-path: path("M0,0A9.61,9.61,0,0,0,7,9L92,31V0Z");
    width: 92px;
    height: 31px;
    bottom: 14px;
    left: 0;
    background: linear-gradient(to right, var(--baseColor) 50%, #849cd9 80%, #849cd9 100%)
}

.wmp .shapeshader#ctrlleft {
    width: 80px;
    height: 76px;
    bottom: 16px;
    left: 5px;
    display: inline-block;
    z-index: 2;
    filter: drop-shadow(0 1px #3f5b9f)
}

.wmp .shapeshader#ctrlleft .wmpshape {
    clip-path: path("M80,0V76a9.63,9.63,0,0,1-1-4V46c0-11-6-21-16-24L4,6C1,5,0,3,0,0Z");
    width: 80px;
    height: 69px;
    bottom: 7px;
    background: linear-gradient(to right, #fff, var(--metallicEffect));
    padding-right: 9px
}

.wmp .wmpshapeholder#ctrlleft .wmpshape {
    clip-path: path("M80,0V76a9.63,9.63,0,0,1-1-4V46c0-11-6-21-16-24L4,6C1,5,0,3,0,0Z");
    width: 80px;
    height: 69px;
    bottom: 22px;
    left: 4px;
    background: #2c458b;
    z-index: 1
}

.wmp .wmpmainframe.collapsed .shapeshader#ctrlleft .wmpshape,
.wmp .wmpmainframe.collapsed .wmpshapeholder#ctrlleft .wmpshape,
.wmp.miniplayer .wmpmainframe .shapeshader#ctrlleft .wmpshape,
.wmp.miniplayer .wmpmainframe .wmpshapeholder#ctrlleft .wmpshape {
    clip-path: path("M69,.18V90.76c-15-5-31.8-26.77-45-40C18.73,45.32,13.83,40.25,9,35.66,7,33.77,5,32,3.06,30.23A8.94,8.94,0,0,1,0,23.48V0L9,0Z")
}

.wmp .shapeshader#ctrlmid:before {
    content: " ";
    width: 16px;
    height: 40px;
    background: red;
    position: absolute;
    left: 0;
    bottom: 45px;
    display: block;
    background: linear-gradient(to right, #c4d6ec, #c1d3eb 46%);
    box-shadow: inset 0 -3px #fffef6, inset 0 -4px #fbfbf4, inset 0 -5px #eff0f0, inset 0 -6px #e7ebf2, inset 0 -7px #dbe3f2, inset 0 -8px #d3dbed, inset 0 -9px #cbd3ed
}

.wmp .shapeshader#ctrlmid {
    width: 225px;
    height: 86px;
    bottom: 1px;
    left: 84px;
    display: inline-block;
    background: linear-gradient(to bottom, transparent 0, transparent 44%, #fffefb 44%, #98afd6 75%, #d1e7ff 88%, #abb7d6);
    z-index: 2;
    border-radius: 0 0 0 21px;
    box-shadow: inset 0 -1px #798bb0
}

.wmp .shapeshader#ctrlmid .wmpshape {
    display: none
}

.wmp .wmpshapeholder#ctrlmid .wmpshape {
    display: none
}

.wmp .shapeshader#ctrlright {
    width: 62px;
    height: 45px;
    bottom: 2px;
    left: 309px;
    display: inline-block;
    z-index: 2
}

.wmp .shapeshader#ctrlright .wmpshape {
    clip-path: path("M62,.06c-19-2-39,47-62,45V.06Z");
    width: 62px;
    height: 45px;
    bottom: 1px;
    background: linear-gradient(to bottom, #fffefb 0, #98afd6 53%, #d1e7ff 83%, #abb7d6)
}

.wmp .wmpshapeholder#ctrlright {
    filter: drop-shadow(1px 0 #a4b6d9) drop-shadow(1px 0 #a9bcde) drop-shadow(1px 0 #a9bcde55);
    bottom: 1px;
    position: absolute;
    z-index: 1
}

.wmp .wmpshapeholder#ctrlright .wmpshape {
    clip-path: path("M62,.06c-19-2-39,47-62,45V.06Z");
    width: 62px;
    height: 45px;
    bottom: 0;
    left: 307px;
    background: #a4b6d9
}

.wmp .wmpmainframe #brand {
    width: 18px;
    height: 16px;
    bottom: 46px;
    left: 35px;
    z-index: 2;
    filter: drop-shadow(-1px -1px #4d6298) drop-shadow(1px 1px #8e9fcd)
}

.wmp .wmpmainframe #brand img {
    width: 100%;
    height: auto
}

.wmp .wmpmainframe #nav {
    display: flex;
    flex-direction: column;
    position: absolute;
    height: calc(100% - 150px);
    top: 44px;
    left: 4px;
    width: 79px;
    padding: 20px 9px 0 0;
    background: linear-gradient(to right, #fff, var(--metallicEffect));
    box-shadow: inset 0 1px #fff, inset 0 -1px #fff;
    z-index: 1;
    overflow: hidden;
    border-radius: 7px 0 0 7px;
    border-style: solid;
    border-width: 1px 0 1px 1px;
    border-color: #3f5b9f
}

/* Add missing styling for expander arrows */
.wmp .wmpmainframe #nav .navitem .expander {
    position: absolute;
    right: 4px;
    top: 11px;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 3px 0 3px 4px;
    border-color: transparent transparent transparent #212741;
    opacity: 0.6;
}

.wmp .wmpmainframe #nav .navitem:hover .expander {
    opacity: 1;
}

.wmp .wmpmainframe #nav .navitem {
    box-sizing: content-box;
    padding: 2px 12px 6px 2px;
    min-height: 30px;
    height: 30px;
    position: relative;
    border: 1px solid transparent;
    font-weight: 600;
    color: #212741
}

.wmp .wmpmainframe #nav .navitem:not(.selected):hover {
    background: linear-gradient(to bottom, #fffffe 0, #b3c6e3 58%, #d1e7ff 85%, #c0cfef 100%);
    box-shadow: inset 1px 0 #fefdf6cc, inset 0 -1px #8c9bcc, inset -1px 0 #a5b5decc;
    border: none;
    padding: 3px 13px 7px 3px;
    z-index: 1
}

.wmp .wmpmainframe #nav .navitem:not(:active):hover:after,
.wmp .wmpmainframe #nav .navitem:not(:active):hover:before {
    display: none
}
/* ... */

